<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    app:navGraph="@navigation/nav_graph"
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:id="@+id/nameHolder"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:text="@string/name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/surnameHolder"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:text="@string/surname" />
        <TextView
            android:id="@+id/medicineHolder"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/medicine" />
</LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
