<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/signupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signupSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/signupName"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupName" />

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/signupSurname"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupSurname" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/signupUsername"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupUsername" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="219dp"
            android:layout_height="54dp"
            android:layout_marginEnd="24dp"
            android:text="@string/signup"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPassword"
            app:layout_constraintVertical_bias="0.862" />

        <Button
            android:id="@+id/signupBackButton"
            android:layout_width="121dp"
            android:layout_height="55dp"
            android:layout_marginEnd="40dp"
            android:text="@string/back"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@+id/signupButton"
            app:layout_constraintTop_toTopOf="@+id/signupButton" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="142dp"
            android:layout_height="51dp"
            android:text="@string/showpassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.579" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>